2013-09-23  Andy Buckley  <andy.buckley@cern.ch>

	* Add the -avoid-version flag to libtool.

	* Final analysis histogramming issues resolved.

2013-08-16  Andy Buckley  <andy.buckley@cern.ch>

	* Adding a ConnectBins flag in make-plots, to decide whether to
	connect adjacent, gapless bins with a vertical line. Enabled by
	default (good for the step-histo default look of MC lines), but
	now rivet-cmphistos disables it for the reference data.

2013-08-14  Andy Buckley  <andy.buckley@cern.ch>

	* Making 2.0.0beta3 -- just a few remaining analysis migration
	issues remaining but it's worth making another beta since there
	were lots of framework fixes/improvements.

2013-08-11  Andy Buckley  <andy.buckley@cern.ch>

	* ARGUS_1993_S2669951 also fixed using scatter autobooking.

	* Fixing remaining issues with booking in BABAR_2007_S7266081
	using the feature below (far nicer than hard-coding).

	* Adding a copy_pts param to some Analysis::bookScatter2D methods:
	pre-setting the points with x values is sometimes genuinely
	useful.

2013-07-26  Andy Buckley  <andy.buckley@cern.ch>

	* Removed the (officially) obsolete CDF 2008 LEADINGJETS and
	NOTE_9351 underlying event analyses -- superseded by the proper
	versions of these analyses based on the final combined paper.

	* Removed the semi-demo Multiplicity projection -- only the
	EXAMPLE analysis and the trivial ALEPH_1991_S2435284 needed
	adaptation.

2013-07-24  Andy Buckley  <andy.buckley@cern.ch>

	* Adding a rejection of histo paths containing /TMP/ from the
	writeData function. Use this to handle booked temporary
	histograms... for now.

2013-07-23  Andy Buckley  <andy.buckley@cern.ch>

	* Make rivet-cmphistos _not_ draw a ratio plot if there is only one line.

	* Improvements and fixes to HepData lookup with rivet-mkanalysis.

2013-07-22  Andy Buckley  <andy.buckley@cern.ch>

	* Add -std=c++11 or -std=c++0x to the Rivet compiler flags if supported.

	* Various fixes to analyses with non-zero numerical diffs.
