@@ -1,3 +1,9 @@
+2013-09-24  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Clean-up in Jet, Particle, and ParticleBase, in particular
+	splitting PID functions on Particle from those on PID codes, and
+	adding convenience kinematic functions to ParticleBase.
+
 2013-09-23  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Add the -avoid-version flag to libtool.
